chore: Bump newest versions (#102)