@@ -59,11 +59,11 @@
         <commons-collections4.version>4.5.0</commons-collections4.version>
         <fury.version>0.4.1</fury.version>
         <hadoop.version>3.4.1</hadoop.version>
-        <jackson.version>2.19.0</jackson.version>
+        <jackson.version>2.19.2</jackson.version>
         <javadbf.version>1.14.1</javadbf.version>
         <jython.version>2.7.4</jython.version>
         <jxl.version>2.6.12</jxl.version>
-        <log4j.version>2.24.3</log4j.version>
+        <log4j.version>2.25.1</log4j.version>
         <logstash-logback.version>8.1</logstash-logback.version>
         <openai-service.version>0.18.2</openai-service.version>
         <parquet.version>1.15.2</parquet.version>
@@ -71,32 +71,32 @@
         <reflections.version>0.10.2</reflections.version>
         <snappy.version>1.1.10.7</snappy.version>
         <tabula.version>1.0.12</tabula.version>
-        <tensorflow.version>1.0.0</tensorflow.version>
+        <tensorflow.version>1.1.0</tensorflow.version>
         <zip4j.version>2.11.5</zip4j.version>
         <!-- Convergences -->
         <avro.version>1.12.0</avro.version>
         <bcprov-jdk18on.version>1.81</bcprov-jdk18on.version>
-        <classgraph.version>4.8.179</classgraph.version>
+        <classgraph.version>4.8.181</classgraph.version>
         <commons-cli.version>1.9.0</commons-cli.version>
         <commons-codec.version>1.18.0</commons-codec.version>
         <commons-compress.version>1.27.1</commons-compress.version>
         <commons-configuration2.version>2.12.0</commons-configuration2.version>
-        <commons-io.version>2.19.0</commons-io.version>
-        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <commons-io.version>2.20.0</commons-io.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
         <commons-logging.version>1.3.5</commons-logging.version>
         <commons-text.version>1.13.1</commons-text.version>
         <dnsjava.version>3.6.3</dnsjava.version>
-        <error_prone_annotations.version>2.38.0</error_prone_annotations.version>
+        <error_prone_annotations.version>2.40.0</error_prone_annotations.version>
         <gson.version>2.13.1</gson.version>
         <guava.version>33.4.8-jre</guava.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
-        <jetty.version>12.0.22</jetty.version>
+        <jetty.version>12.0.23</jetty.version>
         <jline.version>3.30.4</jline.version>
-        <kotlin-stdlib.version>2.1.21</kotlin-stdlib.version>
-        <netty.version>4.2.2.Final</netty.version>
-        <nimbus-jose-jwt.version>10.3</nimbus-jose-jwt.version>
+        <kotlin-stdlib.version>2.2.0</kotlin-stdlib.version>
+        <netty.version>4.2.3.Final</netty.version>
+        <nimbus-jose-jwt.version>10.3.1</nimbus-jose-jwt.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <okio.version>3.12.0</okio.version>
+        <okio.version>3.15.0</okio.version>
         <protobuf-java.version>4.31.1</protobuf-java.version>
         <reactive-streams.version>1.0.4</reactive-streams.version>
         <slf4j.version>2.0.17</slf4j.version>
@@ -104,8 +104,8 @@
         <!-- Test Framework -->
         <hamcrest.version>3.0</hamcrest.version>
         <junit.version>4.13.2</junit.version>
-        <junit-platform.version>1.13.1</junit-platform.version>
-        <junit-jupiter.version>5.13.1</junit-jupiter.version>
+        <junit-platform.version>1.13.3</junit-platform.version>
+        <junit-jupiter.version>5.13.3</junit-jupiter.version>
     </properties>
 
     <distributionManagement>
@@ -154,7 +154,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -183,7 +183,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.5.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -203,7 +203,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
+                <version>3.5.3</version>
                 <dependencies>
                     <dependency>
                         <groupId>me.fabriciorby</groupId>
@@ -213,8 +213,10 @@
                 </dependencies>
                 <configuration>
                     <argLine>-Dfile.encoding="UTF-8"</argLine>
-                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                     <argLine>-Darrow.memory.debug.allocator=true</argLine>
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/sun.misc=ALL-UNNAMED</argLine>
+                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                     <reportFormat>plain</reportFormat>
                     <consoleOutputReporter>
                         <disable>true</disable>
@@ -298,7 +300,7 @@
                     <plugin>
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
-                        <version>0.7.0</version>
+                        <version>0.8.0</version>
                         <extensions>true</extensions>
                         <configuration>
                             <publishingServerId>central</publishingServerId>
@@ -383,7 +385,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.2.7</version>
+                        <version>3.2.8</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
